--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,7 @@ http {
 		listen		8080;
 		server_name	localhost;
 		access_log 	/var/log/nginx/asterixmgmt.log;
+		error_log	/var/log/nginx/asterixmgmt.err;
 
 		location /api/ {
 			proxy_set_header	Content-Type	application/json;
